# bugbounty-hunter

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_FLOW.md  AUDIT_VALIDATION_MATURITY.md  AUTHORIZATION_INTELLIGENCE_AUDIT.md  AUTHORIZATION_INTELLIGENCE_PLATFORM.md  Alternate_requirements_installer.py  CHANGELOG.md  COMPREHENSIVE_REVIEW.md  DISCOVERY_EFFECTIVENESS_REVIEW.md  DISCOVERY_INTELLIGENCE_AUDIT.md  DISCOVERY_REVIEW.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  PENETESTING_COVERAGE.md  README.md  SEPARATE_REQUIREMENTS_INSTALLER.py  cli.py  config.example.yaml  download.py  goals.txt  main.py  pyproject.toml  requirements-dev.txt  requirements-headless.txt  requirements.txt  scanner.py
.opencode/: anchored_summary.md
app/: bootstrap.py  capabilities.py  cli.py  container.py  orchestrator.py
engines/: __init__.py  asset_graph.py  asset_prioritisation.py  attack_chain.py  audit_log.py  auth_session.py  authorization.py  baseline.py  business_discovery.py  confidence.py  consensus_engine.py  cross_scan_dedup.py  dedup.py  diff.py  differential_auth.py  discovery_store.py  duplicate_risk.py  evidence_engine.py  evidence_quality.py  evidence_validator.py  footprint.py  gql_auth.py  gql_auth_mapper.py  gql_auth_tester.py  gql_ownership.py  gql_relationships.py  history.py  impact.py  impact_escalation.py  impact_validator.py  investigation.py  metrics.py  multi_account_discovery.py  object_harvester.py  oob_poller.py  outcome_feedback.py  ownership_discovery.py  ownership_validator.py  payload_intelligence.py  promotion.py  (+12 more)
models/: __init__.py  (+16 more)
(+74 files in other folders)
